amended the size of the cards, container margin, footer margin and footer colour to reduce scrolling and ensure all cards and controls visible without the need to scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,15 +112,15 @@ body {
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-gap: 10px;
-    margin: 50px auto;
+    margin: 14px auto;
     justify-content: center;
     perspective: 500px;
 }
 
 .card {
     position: relative;
-    height: 155px;
-    width: 125px;
+    height: 120px;
+    width: 105px;
     border: none;
 }
 
@@ -168,8 +168,8 @@ body {
 }
 
 .dog-card{
-    height: 155px;
-    width: 125px;
+    height: 120px;
+    width: 105px;
     object-fit: cover;
 }
 
@@ -183,7 +183,7 @@ body {
     text-align: center;
     font-family: 'Courier Prime', monospace;
     font-size: 18px;
-    margin-top: 35px;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -191,7 +191,7 @@ body {
 @media (max-width: 640px){
 .card {
     position: relative;
-    height: 70px;
+    height: 65px;
     width: 50px;
     }
 .cardgame-info-container {
@@ -207,7 +207,7 @@ body {
     color: #7FFF00;
 }
 .dog-card{
-    height: 70px;
+    height: 65px;
     width: 50px;
     object-fit: cover;
 }
